# DevOps-Service

./: .env.example  CLAUDE.md  README.md
.github/workflows/: docker-publish.yml  frontend-ci.yml  sync-protobuf.yml
backend/: Cargo.toml
backend/src/models/: mod.rs
backend/src/routes/: dashboard.rs  issues.rs  merge_requests.rs  mod.rs  repos.rs
crates/raidian/: generate.sh
crates/raidian/proto/: pipeline.proto
crates/raidian/src/: generated.rs  lib.rs
crates/yuxu-cli/: Cargo.toml
crates/yuxu-cli/src/: client.rs  config.rs  main.rs
crates/yuxu-cli/src/commands/: auth.rs  repo.rs
crates/yuxu-core/src/: error.rs  git_ops.rs
crates/yuxu-server/: Dockerfile
crates/yuxu-server/src/: app_state.rs  config.rs  main.rs
crates/yuxu-server/src/collab/: hub.rs  ws.rs
crates/yuxu-server/src/db/: issues.rs  merge_requests.rs  repositories.rs  users.rs
crates/yuxu-server/src/routes/: auth.rs  pipelines.rs
frontend/: Dockerfile  index.html  nasti.config.ts  package.json
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  main.tsx  nasti-env.d.ts
frontend/src/components/: Header.tsx  RepoCreateModal.tsx  RequireAuth.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/pages/: _404.tsx  login.tsx
frontend/src/pages/oauth/: callback.tsx
frontend/src/pages/repos/: [...fullName].tsx  index.tsx
frontend/yuxu/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/yuxu/public/: manifest.json
frontend/yuxu/src/: App.css  App.tsx  nasti-env.d.ts
frontend/yuxu/src/layouts/: MainLayout.tsx
(+9 files in other folders)
